--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Celestial Herds</h1>
+        <h1><a href="#home" data-page="home">Celestial Herds</a></h1>
         <div id="currency-display">
             <div class="currency">
                 <img src="https://i.imgur.com/6egfuCc.png" alt="Radiant Icon" class="currency-icon">
@@ -25,7 +25,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#home" data-page="home">Home</a></li>
+            <li><a href="#jobs" data-page="jobs">Jobs</a></li>
             <li><a href="#stable" data-page="stable">Stable</a></li>
             <li><a href="#market" data-page="market">Market</a></li>
             <li><a href="#messages" data-page="messages">Messages</a></li>
@@ -38,36 +38,12 @@
             <h2>Welcome to Celestial Herds</h2>
             <img src="https://cdn.leonardo.ai/users/1fff0d16-fdc3-46a3-b77d-51d51260dced/generations/2768765a-6fe0-4691-bef7-8eacff6b8efa/Leonardo_Phoenix_oil_painting_of_a_horse_on_canvas_in_the_styl_0.jpg" alt="Celestial Horse" class="main-image">
             <p>Embark on a magical journey where you can breed, train, and care for mythical horses. Create your own legendary stable and compete with players from around the world!</p>
-            <section id="game-features">
-                <h3>Game Features</h3>
-                <ul>
-                    <li>Breed and raise mythical horses like Unicorns, Pegasi, and Kelpies</li>
-                    <li>Train your horses and compete in magical races and tournaments</li>
-                    <li>Trade horses with other players in the global market</li>
-                    <li>Customize your stable and horses with unique accessories</li>
-                </ul>
-            </section>
-            <section id="tips-tricks">
-                <h3>Tips & Tricks</h3>
-                <ul>
-                    <li>Visit your stable daily to bond with your horses and increase their stats</li>
-                    <li>Participate in daily quests to earn extra rewards</li>
-                    <li>Join a guild to access exclusive content and get help from experienced players</li>
-                    <li>Diversify your stable with different breeds to excel in various competitions</li>
-                </ul>
-            </section>
-            <section id="support-subscribe">
-                <div id="support">
-                    <h3>Support the Game</h3>
-                    <p>Love Celestial Herds? Consider supporting us to help keep the magic alive!</p>
-                    <a href="#" class="button" id="donate-button">Donate</a>
-                </div>
-                <div id="subscribe">
-                    <h3>Subscribe for Premium Benefits</h3>
-                    <p>Unlock exclusive horses, special events, and more with our premium subscription!</p>
-                    <a href="#" class="button" id="subscribe-button">Subscribe Now</a>
-                </div>
-            </section>
+            <!-- Rest of the home content -->
+        </section>
+        <section id="jobs" class="page">
+            <h2>Jobs</h2>
+            <p>Complete jobs to earn rewards and advance your stable.</p>
+            <!-- Add job listings and related content here -->
         </section>
         <section id="stable" class="page">
             <h2>Stable</h2>
