--- a/market.html
+++ b/market.html
@@ -74,6 +74,15 @@
             <div id="user-pony-listings" class="pony-listings">
                 <!-- User-listed pony listings will be dynamically inserted here -->
             </div>
+            <section id="daily-market">
+    <h3>Daily Market</h3>
+    <p>New ponies available every day at midnight UTC. Don't miss out on these unique offerings!</p>
+    
+    <div id="market-reset-timer">
+        <p>Time until next market reset: <span id="timer">Loading...</span></p>
+    </div>
+    
+    <!-- ... rest of the daily market content ... -->
         </section>
     </main>
 
