--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="centered-content">
         <section id="hero">
             <img src="https://i.imgur.com/AoPkfCr.png" alt="Celestial Herds Hero Image" class="hero-image">
             <h2>Welcome to Celestial Herds!</h2>
@@ -38,34 +38,31 @@
                 <h4>Breed, Buy, and Sell Ponies</h4>
                 <p>Grow your stable by breeding ponies with special traits, buying from the daily randomized marketplace, or selling and trading with other users.</p>
             </div>
-            <div class="feature">
-                <h4>Train and Compete</h4>
-                <p>Enhance your ponies' skills through training, then test their abilities in competitions to earn rewards and climb the leaderboards.</p>
-            </div>
-            <div class="feature">
-                <h4>Explore Pony Lore</h4>
-                <p>Every pony has a unique story waiting to be uncovered. Dive into the lore of individual ponies and unlock the secrets of their origins and magical powers.</p>
-            </div>
-            <div class="feature">
-                <h4>Daily Market Resets</h4>
-                <p>The marketplace refreshes daily with a randomized selection of ponies and items. No two markets are alike, offering you endless variety and opportunities to discover rare finds.</p>
-            </div>
-            <div class="feature">
-                <h4>Rarity System</h4>
-                <p>Ponies come in various rarities—Ordinary, Common, Uncommon, Rare, Very Rare, Extremely Rare, and the coveted Mythic ponies. Can you collect them all?</p>
-            </div>
-            <div class="feature">
-                <h4>Seasonal Ponies</h4>
-                <p>Keep an eye out for limited-time Seasonal Ponies! These exclusive ponies are only available during certain events, and once the season ends, they can only be acquired through trading or buying from other players.</p>
-            </div>
-            <div class="feature">
-                <h4>Quests and Jobs</h4>
-                <p>Earn money and items by sending your ponies on quests or jobs. Whether it's a simple task or a grand adventure, each job brings you closer to upgrading your stable and uncovering more of Celestial Herds' mysteries.</p>
-            </div>
-            <div class="feature">
-                <h4>Compete and Trade</h4>
-                <p>Challenge other players in friendly competition or engage in the bustling trade economy to build your perfect herd of ponies.</p>
-            </div>
+            <!-- ... other features ... -->
+            Key Features
+Breed, Buy, and Sell Ponies
+Grow your stable by breeding ponies with special traits, buying from the daily randomized marketplace, or selling and trading with other users.
+
+Train and Compete
+Enhance your ponies' skills through training, then test their abilities in competitions to earn rewards and climb the leaderboards.
+
+Explore Pony Lore
+Every pony has a unique story waiting to be uncovered. Dive into the lore of individual ponies and unlock the secrets of their origins and magical powers.
+
+Daily Market Resets
+The marketplace refreshes daily with a randomized selection of ponies and items. No two markets are alike, offering you endless variety and opportunities to discover rare finds.
+
+Rarity System
+Ponies come in various rarities—Ordinary, Common, Uncommon, Rare, Very Rare, Extremely Rare, and the coveted Mythic ponies. Can you collect them all?
+
+Seasonal Ponies
+Keep an eye out for limited-time Seasonal Ponies! These exclusive ponies are only available during certain events, and once the season ends, they can only be acquired through trading or buying from other players.
+
+Quests and Jobs
+Earn money and items by sending your ponies on quests or jobs. Whether it's a simple task or a grand adventure, each job brings you closer to upgrading your stable and uncovering more of Celestial Herds' mysteries.
+
+Compete and Trade
+Challenge other players in friendly competition or engage in the bustling trade economy to build your perfect herd of ponies.
         </section>
 
         <section id="cta">
