--- a/index.html
+++ b/index.html
@@ -39,32 +39,35 @@
                 <p>Grow your stable by breeding ponies with special traits, buying from the daily randomized marketplace, or selling and trading with other users.</p>
             </div>
             <!-- ... other features ... -->
-            Key Features
-Breed, Buy, and Sell Ponies
-Grow your stable by breeding ponies with special traits, buying from the daily randomized marketplace, or selling and trading with other users.
-
-Train and Compete
-Enhance your ponies' skills through training, then test their abilities in competitions to earn rewards and climb the leaderboards.
-
-Explore Pony Lore
-Every pony has a unique story waiting to be uncovered. Dive into the lore of individual ponies and unlock the secrets of their origins and magical powers.
-
-Daily Market Resets
-The marketplace refreshes daily with a randomized selection of ponies and items. No two markets are alike, offering you endless variety and opportunities to discover rare finds.
-
-Rarity System
-Ponies come in various rarities—Ordinary, Common, Uncommon, Rare, Very Rare, Extremely Rare, and the coveted Mythic ponies. Can you collect them all?
-
-Seasonal Ponies
-Keep an eye out for limited-time Seasonal Ponies! These exclusive ponies are only available during certain events, and once the season ends, they can only be acquired through trading or buying from other players.
-
-Quests and Jobs
-Earn money and items by sending your ponies on quests or jobs. Whether it's a simple task or a grand adventure, each job brings you closer to upgrading your stable and uncovering more of Celestial Herds' mysteries.
-
-Compete and Trade
-Challenge other players in friendly competition or engage in the bustling trade economy to build your perfect herd of ponies.
-        </section>
-
+<section id="key-features">
+    <h3>Key Features</h3>
+    <ul class="feature-list">
+        <li>
+            <strong>Breed, Buy, and Sell Ponies:</strong> Grow your stable by breeding ponies with special traits, buying from the daily randomized marketplace, or selling and trading with other users.
+        </li>
+        <li>
+            <strong>Train and Compete:</strong> Enhance your ponies' skills through training, then test their abilities in competitions to earn rewards and climb the leaderboards.
+        </li>
+        <li>
+            <strong>Explore Pony Lore:</strong> Every pony has a unique story waiting to be uncovered. Dive into the lore of individual ponies and unlock the secrets of their origins and magical powers.
+        </li>
+        <li>
+            <strong>Daily Market Resets:</strong> The marketplace refreshes daily with a randomized selection of ponies and items. No two markets are alike, offering you endless variety and opportunities to discover rare finds.
+        </li>
+        <li>
+            <strong>Rarity System:</strong> Ponies come in various rarities—Ordinary, Common, Uncommon, Rare, Very Rare, Extremely Rare, and the coveted Mythic ponies. Can you collect them all?
+        </li>
+        <li>
+            <strong>Seasonal Ponies:</strong> Keep an eye out for limited-time Seasonal Ponies! These exclusive ponies are only available during certain events, and once the season ends, they can only be acquired through trading or buying from other players.
+        </li>
+        <li>
+            <strong>Quests and Jobs:</strong> Earn money and items by sending your ponies on quests or jobs. Whether it's a simple task or a grand adventure, each job brings you closer to upgrading your stable and uncovering more of Celestial Herds' mysteries.
+        </li>
+        <li>
+            <strong>Compete and Trade:</strong> Challenge other players in friendly competition or engage in the bustling trade economy to build your perfect herd of ponies.
+        </li>
+    </ul>
+</section>
         <section id="cta">
             <h3>Join us in Celestial Herds and experience a world full of adventure, creativity, and endless possibilities!</h3>
             <a href="#signup" class="cta-button">Start Your Adventure</a>
