--- a/lore.html
+++ b/lore.html
@@ -3,31 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lore - Celestial Herds</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="lore.css">
+    <title>Celestial Herds - Lore</title>
+    <link rel="stylesheet" href="lore-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Lora&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="stable.html">Stable</a></li>
-            <li><a href="market.html">Market</a></li>
-            <li><a href="messages.html">Messages</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="lore.html">Lore</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h2>Horse Breed Lore</h2>
-        <div id="lore-container">
-            <!-- Breed lore will be dynamically populated here -->
-        </div>
+    <header>
+        <h1>Celestial Herds</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="marketplace.html">Marketplace</a></li>
+                <li><a href="stable.html">My Stable</a></li>
+                <li><a href="breeding.html">Breeding</a></li>
+                <li><a href="competitions.html">Competitions</a></li>
+                <li><a href="lore.html">Lore</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="lore-content">
+        <img src="https://i.imgur.com/IKOPEHv.png" alt="Celestial Herds Lore Image" class="lore-image">
+        
+        <h2>The Myth of Lumoria: The Secret of Sir Bert</h2>
+
+        <section class="lore-text">
+            <p>Long believed to be a myth, the magical ponies of Lumoria were first discovered by the famed British explorer, Sir Bert, in the year 1850. On one of his many voyages across the globe, Sir Bert stumbled upon an uncharted archipelago hidden deep within the Pacific Ocean. These islands, lush and brimming with strange wonders, housed creatures unlike anything he had ever seen—ponies of mystical beauty, with wings that sparkled in the sunlight and coats that shimmered like the colors of the dawn.</p>
+
+            <p>These magical beings were more than just animals; they held deep wisdom and possessed unique powers tied to the elements of nature and the stars. However, Sir Bert kept his extraordinary discovery secret for many years, sharing it only with his children, Winnie and Oozma. Together, they carefully studied the ponies, taming the first ever-known magical ponies and giving them names. The knowledge was guarded within their family until Sir Bert felt confident enough in his research to reveal the ponies to the world.</p>
+
+            <h3>Born from the Tears of Angels</h3>
+            <p>Legends tell that these ponies were born from the tears of angels long ago. According to ancient lore, the angels wept as they watched the Earth from above, and where their tears fell upon the fertile land of Lumoria, the first ponies came to life. These ponies, sacred and pure, grew strong and resilient on the islands, forming a magical society that thrived in perfect harmony with nature.</p>
+
+            <h3>Cinnabi, the First Pony and Goddess of Creation</h3>
+            <p>At the heart of pony culture is the worship of Cinnabi, a goddess they revere as the first pony ever born. As the story goes, Cinnabi was tamed by the cherubs themselves, who descended from the heavens to teach her the ways of peace, balance, and love. Under their guidance, she grew wise and powerful, and in time, she gave birth to the Sun and Moon, her two celestial children.</p>
+
+            <p>Cinnabi bestowed upon them the sacred duty of creating a harmonious day and night cycle for the ponies' mystical islands. The Sun, her radiant child, filled the sky with light and warmth, while the Moon, her quieter, reflective offspring, brought the cool calm of night and watched over the stars.</p>
+
+            <h3>The Birth of Stars and Clouds</h3>
+            <p>As time passed, the Moon goddess, Lunar, grew lonely and decided to create her own children—the stars. She scattered them across the heavens, giving each star a sparkle of life to watch over the ponies during the night. Each star is said to hold a wish from the ponies, making the night sky sacred in Lumoria.</p>
+
+            <p>The Sun, not to be outdone by her sibling, decided to give birth to her own creations—the fluffy clouds. These clouds became her companions during the daylight hours, drifting peacefully across the sky and providing shelter to the land below from the blazing heat of her light.</p>
+
+            <h3>A Land of Mysteries</h3>
+            <p>The islands of Lumoria, shaped by the divine forces of Cinnabi and her celestial children, are a place filled with secrets and wonders. It is said that the land still pulses with the magic of the ancient angels, and those who set foot on its shores feel an otherworldly energy flow through them.</p>
+
+            <p>From hidden caves where starlight collects into pools of liquid magic to enchanted forests where the whispers of the cherubs still echo, Lumoria is a land rich in myth and mystery. Sir Bert's discovery opened the door to a world that continues to amaze and captivate explorers and pony enthusiasts alike, as they uncover the deep lore and history of these wondrous creatures.</p>
+        </section>
     </main>
+
     <footer>
-        &copy; 2024 Celestial Herds. All rights reserved.
+        <p>&copy; 2024 Celestial Herds. All rights reserved.</p>
     </footer>
-    <script src="header.js"></script>
-    <script src="lore.js"></script>
 </body>
 </html>
