--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
 
         <section id="cta">
-            <h3>Join us in Celestial Herds and experience a world full of adventure, creativity, and endless possibilities!</h3>
+            <h3>Join us in Celestial Herds and experience a world full of adventure, creativity, and endless possibilities!!</h3>
             <a href="#signup" class="cta-button">Start Your Adventure</a>
         </section>
     </main>
