--- a/index.html
+++ b/index.html
@@ -21,30 +21,32 @@
         </nav>
     </header>
 
-    <main class="centered-content">
-        <section id="hero">
-            <img src="https://i.imgur.com/AoPkfCr.png" alt="Celestial Herds Hero Image" class="hero-image">
-            <h2>Welcome to Celestial Herds!</h2>
-            <p>Discover, Breed, and Trade Unique Ponies in a Magical World</p>
-        </section>
+    <main>
+        <div class="centered-content">
+            <section id="hero">
+                <img src="https://i.imgur.com/AoPkfCr.png" alt="Celestial Herds Hero Image" class="hero-image">
+                <h2>Welcome to Celestial Herds!</h2>
+                <p>Discover, Breed, and Trade Unique Ponies in a Magical World</p>
+            </section>
 
-        <section id="introduction">
-            <p>Step into the enchanting world of Celestial Herds, where you can immerse yourself in a vibrant community of ponies with rich lore, unique traits, and endless possibilities! Whether you're a collector, breeder, or adventurer, Celestial Herds offers exciting ways to build your dream pony collection.</p>
-        </section>
+            <section id="introduction">
+                <p>Step into the enchanting world of Celestial Herds, where you can immerse yourself in a vibrant community of ponies with rich lore, unique traits, and endless possibilities! Whether you're a collector, breeder, or adventurer, Celestial Herds offers exciting ways to build your dream pony collection.</p>
+            </section>
 
-        <section id="key-features">
-            <h3>Key Features</h3>
-            <div class="feature">
-                <h4>Breed, Buy, and Sell Ponies</h4>
-                <p>Grow your stable by breeding ponies with special traits, buying from the daily randomized marketplace, or selling and trading with other users.</p>
-            </div>
-            <!-- ... other features ... -->
-        </section>
+            <section id="key-features">
+                <h3>Key Features</h3>
+                <div class="feature">
+                    <h4>Breed, Buy, and Sell Ponies</h4>
+                    <p>Grow your stable by breeding ponies with special traits, buying from the daily randomized marketplace, or selling and trading with other users.</p>
+                </div>
+                <!-- ... other features ... -->
+            </section>
 
-        <section id="cta">
-            <h3>Join us in Celestial Herds and experience a world full of adventure, creativity, and endless possibilities!!</h3>
-            <a href="#signup" class="cta-button">Start Your Adventure</a>
-        </section>
+            <section id="cta">
+                <h3>Join us in Celestial Herds and experience a world full of adventure, creativity, and endless possibilities!</h3>
+                <a href="#signup" class="cta-button">Start Your Adventure</a>
+            </section>
+        </div>
     </main>
 
     <footer>
