--- a/stable.html
+++ b/stable.html
@@ -3,28 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stable - Fantasy Horse Reality</title>
+    <title>Stable - Celestial Herds</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="stable.html">Stable</a></li>
-            <li><a href="market.html">Market</a></li>
-            <li><a href="messages.html">Messages</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="lore.html">Lore</a></li>
-        </ul>
-    </nav>
+    <header>
+        <h1>Celestial Herds</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="market.html">Marketplace</a></li>
+                <li><a href="stable.html">My Stable</a></li>
+                <li><a href="breeding.html">Breeding</a></li>
+                <li><a href="competitions.html">Competitions</a></li>
+                <li><a href="lore.html">Lore</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <main>
-        <h2>Your Stable</h2>
-        <div id="horse-list">
-            <!-- Horse list will be dynamically populated here -->
+        <div class="centered-content">
+            <h2>Your Stable</h2>
+            <div id="horse-list">
+                <!-- Horse list will be dynamically populated here -->
+            </div>
+            <button id="breed-btn">Breed Horses</button>
+            <button id="train-btn">Train Horses</button>
         </div>
-        <button id="breed-btn">Breed Horses</button>
-        <button id="train-btn">Train Horses</button>
     </main>
+
     <div id="train-modal" class="modal">
         <div class="modal-content">
             <h3>Select a horse to train</h3>
@@ -32,9 +40,11 @@
             <button id="close-modal">Close</button>
         </div>
     </div>
+
     <footer>
-        &copy; 2024 Celestial Herds. All rights reserved.
+        <p>&copy; 2024 Celestial Herds. All rights reserved.</p>
     </footer>
+
     <script src="header.js"></script>
     <script src="stable.js"></script>
 </body>
