--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,7 @@
         <h2>Sign Up for Celestial Herds</h2>
         <form id="signupForm">
             <input type="text" id="username" placeholder="Username" required>
+            <span id="usernameError" class="error"></span>
             <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Sign Up</button>
